<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.CursoDetailsActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewBannerCursoAtualizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/curso"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/design_default_color_primary_dark" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <EditText
            android:id="@+id/editTextTitulo"
            android:layout_width="312dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/titulo"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textAlignment="textStart"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/editTextDescricao"
            android:layout_width="312dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/descricao"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textAlignment="textStart"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/editTextInicio"
            android:layout_width="312dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/inicio"
            android:importantForAutofill="no"
            android:inputType="date"
            android:textAlignment="textStart"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/editTextTermino"
            android:layout_width="312dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/termino"
            android:importantForAutofill="no"
            android:inputType="date"
            android:textAlignment="textStart"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/editTextHorario"
            android:layout_width="312dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/horario"
            android:importantForAutofill="no"
            android:inputType="datetime"
            android:textAlignment="textStart"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/editTextInstrutor"
            android:layout_width="312dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/instrutor"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textAlignment="textStart"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/editTextCondicao"
            android:layout_width="312dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/condicao_hints"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textAlignment="textStart"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/editTextValor"
            android:layout_width="312dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/valor"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:digits="0123456789,."
            android:gravity="start"
            android:textAlignment="textStart"
            tools:ignore="TextContrastCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonAtualizarUsuario"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:onClick="atualizarCursoOnClick"
            android:text="@string/atualizar_curso" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>