<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.CadastrarUsuarioActivity">

    <LinearLayout
        android:id="@+id/linearLayoutPrincipal"
        android:layout_width="312dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewBannerCursoAtualizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/banner_usuario"
            android:text="@string/usuario"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/design_default_color_primary_dark" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <EditText
            android:id="@+id/editTextCadUsuario"
            android:layout_width="312dp"
            android:layout_height="48dp"
            android:drawableStart="@drawable/baseline_person_add_alt_1_24"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/usuario"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <EditText
            android:id="@+id/editTextCadEmail"
            android:layout_width="312dp"
            android:layout_height="48dp"
            android:drawableStart="@drawable/baseline_mark_email_unread_24"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/e_mail"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <EditText
            android:id="@+id/editTextCadSenha"
            android:layout_width="312dp"
            android:layout_height="48dp"
            android:drawableStart="@drawable/baseline_add_moderator_24"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/senha"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <EditText
            android:id="@+id/editTextCadConfirmarSenha"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:drawableStart="@drawable/baseline_add_moderator_24"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/confirmar_senha"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonCadastrarUsuario"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:text="@string/cadastrar_usuario" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>