<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayoutBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/clique_para_saber_mais"
            app:srcCompat="@drawable/banner_ec" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutSobre"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutBanner"/>

    <LinearLayout
        android:id="@+id/linearLayoutPrincipal"
        android:layout_width="312dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutSobre">

        <EditText
            android:id="@+id/editTextCadUsuario"
            android:layout_width="312dp"
            android:layout_height="48dp"
            android:drawableStart="@drawable/baseline_person_24"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/usuario"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <EditText
            android:id="@+id/editTextCadSenha"
            android:layout_width="312dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/baseline_security_24"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/senha"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutBotoes"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonEntrar"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:text="@string/entrar" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <Button
            android:id="@+id/buttonAtualizarUsuario"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:text="@string/cadastre_se" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>